<resources>
    <string name="app_name">WaffirApp</string>
    <string name="image_slider">image_slider</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="small_text">"\n Avoiding elevation interference."
        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="nested_scroll_text">Tutorialwing.com presents tutorial on NestedScrollView!
        NestedScrollView is just like ScrollView, but it supports acting as both a nested
        scrolling parent and child on both new and old versions of Android. Nested scrolling
        is enabled by default. NestedScrollView is used when there is need for scrolling inside
        another scrolling view. Normally this would be difficult task because system would be
        unable to decide which view to scroll. This is where NestedScrollView comes into role.
    </string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home_activty">HomeActivty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">All Waffir Product</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_loyalty_card">Loyalty Card</string>
    <string name="txt_cart">Cart</string>
    <string name="txt_search">Search</string>
    <string name="txt_offers">Offers</string>
    <string name="txt_home_page">Home</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_img_offers">Image offers</string>
    <string name="txt_image_offer">Image offer</string>
    <string name="txt_image_logo_toolbar">Image Logo toolbar</string>
    <string name="txt_receipt_from_the_center">from center</string>
    <string name="txt_delivery">From delivery</string>
    <string name="your_notes_option">Add Notes (Option) \n Write here</string>
    <string name="thank_you_for_choose_waffir_center">Thank you for choose center \n waffir</string>
    <string name="txt_read_more">Read More</string>
    <string name="txt_read_less">Read less</string>
    <string name="txt_quantity_is">Quantity is:</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string-array name="sort_array">
        <item>From old to new</item>
        <item>From new to old</item>
        <item>From low to high price</item>
        <item>From high to low price</item>
    </string-array>
    <string name="title_activity_loyalty_card">LoyaltyCardActivity</string>
    <string name="txt_currency_iraq">IQD</string>
    <string name="txt_quantity_available">Quantity Available:</string>
    <string name="txt_min_quantity">The minimum is</string>
    <string name="txt_max_quantity">Tha maximum is</string>
    <string name="txt_similar_products">Similar products</string>
    <string name="txt_color_selected">Color selected :</string>
    <string name="txt_select_color">Select color</string>
    <string name="txt_select_province">Select Province</string>
    <string name="txt_sort_by">Sort by</string>
    <string name="txt_log_in">log in</string>
    <string name="txt_enter_valid_email">Enter valid email</string>
    <string name="txt_check_network">Check your internet connection!</string>
    <string name="txt_signout_account">Do you want to sign out from your account?</string>
    <string name="txt_sign_out">Sign Out</string>
    <string name="txt_delivery_address">Delivery Address</string>
    <string name="note">Note</string>
    <string name="phone_number">Phone Number</string>
    <string name="building_number">Building Number</string>
    <string name="street_two_name">Street Two Name</string>
    <string name="street_name">Street Name</string>
    <string name="address_name">Address Name</string>
    <string name="province">Province</string>
    <string name="add_new_address">Add new address</string>
    <string name="delete_address">Delete Address</string>
    <string name="txt_add_new_address">Add new address</string>
    <string name="title_activity_maps">Map</string>
    <string name="txt_title_marker_maps">Marker in Dog elBab</string>
    <string name="txt_address_name">Address Name :</string>
    <string name="title_addresses">Addresses</string>
    <string name="txt_edit_address">Edit Address</string>
    <string name="txt_update_address">Address updated successfully</string>
</resources>
