<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".presentation.ui.activity.AddressActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/txt_delivery_address"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_home_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dim_radius_10"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/img_maps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/ic_place_holder_default" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_province_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/gradient_white_radius_5"
        android:gravity="center_vertical|start"
        android:hint="@string/province"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHighlight="@color/grey_100" />

    <View style="@style/DividerLine" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_address_name"
        style="@style/AddressEditText"
        app:hintTextAppearance="@style/EditTextHintSize">

        <EditText
            android:id="@+id/ed_address_name"
            style="@style/RegistrationEditText"
            android:gravity="center_vertical|start"
            android:hint="@string/address_name"
            android:inputType="text"
            android:maxLines="1"
            android:nextFocusDown="@id/ed_street_name"
            android:textColorHighlight="@color/grey_100" />
    </com.google.android.material.textfield.TextInputLayout>

    <View style="@style/DividerLine" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_street_name"
        style="@style/AddressEditText"
        app:hintTextAppearance="@style/EditTextHintSize">

        <EditText
            android:id="@+id/ed_street_name"
            style="@style/RegistrationEditText"
            android:gravity="center_vertical|start"
            android:hint="@string/street_name"
            android:inputType="text"
            android:maxLines="1"
            android:nextFocusDown="@id/ed_street_two_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <View style="@style/DividerLine" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_street_two_name"
        style="@style/AddressEditText"
        app:hintTextAppearance="@style/EditTextHintSize">

        <EditText
            android:id="@+id/ed_street_two_name"
            style="@style/RegistrationEditText"
            android:gravity="center_vertical|start"
            android:hint="@string/street_two_name"
            android:inputType="text"
            android:maxLines="1"
            android:nextFocusDown="@id/ed_building_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <View style="@style/DividerLine" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_building_number"
        style="@style/AddressEditText"
        app:hintTextAppearance="@style/EditTextHintSize">

        <EditText
            android:id="@+id/ed_building_number"
            style="@style/RegistrationEditText"
            android:gravity="center_vertical|start"
            android:hint="@string/building_number"
            android:inputType="numberSigned"
            android:maxLines="1"
            android:nextFocusDown="@id/ed_phone_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <View style="@style/DividerLine" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_phone_number"
        style="@style/AddressEditText"
        app:hintTextAppearance="@style/EditTextHintSize">

        <EditText
            android:id="@+id/ed_phone_number"
            style="@style/RegistrationEditText"
            android:gravity="center_vertical|start"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:nextFocusDown="@id/ed_note" />
    </com.google.android.material.textfield.TextInputLayout>

    <View style="@style/DividerLine" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_note"
        style="@style/AddressEditText"
        app:hintTextAppearance="@style/EditTextHintSize">

        <EditText
            android:id="@+id/ed_note"
            style="@style/RegistrationEditText"
            android:gravity="center_vertical|start"
            android:hint="@string/note"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_new_address"
        style="@style/ButtonGreen"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add_new_address"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btn_delete_address"
        style="@style/ButtonGreen"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/gradient_red_radius"
        android:text="@string/delete_address"
        android:textStyle="normal"
        android:visibility="gone" />

</LinearLayout>